# cynapse

./: CMakeLists.txt  README.md  build.sh  get.sh  post.sh  tests.sh
lib/: cynapse.hpp  neuralnetwork.cpp  neuralnetwork.hpp  neuron.cpp  neuron.hpp  rng.cpp  rng.hpp  utils.cpp  utils.hpp
